[gd_scene load_steps=17 format=2]

[ext_resource path="res://game_script/character_stats/CharacterStats.gd" type="Script" id=1]
[ext_resource path="res://game_script/battle/HurtBox.gd" type="Script" id=2]
[ext_resource path="res://game_script/battle/HitBox.gd" type="Script" id=3]
[ext_resource path="res://game_script/skills/CharacterSkill.gd" type="Script" id=4]
[ext_resource path="res://assets/sprite/hoa_lan/idle.png" type="Texture" id=5]
[ext_resource path="res://assets/sprite/hoa_lan/inbattle.png" type="Texture" id=6]
[ext_resource path="res://game_script/entities/entity.gd" type="Script" id=7]
[ext_resource path="res://game_script/battle/NodeUB.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 19, 26 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 18, 26 )

[sub_resource type="Animation" id=26]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("InBattle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "check_next_move"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "dying"
tracks/0/type = "value"
tracks/0/path = NodePath("InBattle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("InBattle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "idle"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=29]
resource_name = "loading"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("InBattle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shot_normal"
} ]
}

[sub_resource type="Animation" id=30]
resource_name = "running"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("InBattle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 320, 30 )

[node name="Entity" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource( 7 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
priority = 1.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 6.13577e-07, 7.01231e-07 )
shape = SubResource( 24 )

[node name="CollisionBody" type="CollisionShape2D" parent="."]
shape = SubResource( 25 )

[node name="Idle" type="Sprite" parent="."]
position = Vector2( 4, 2 )
texture = ExtResource( 5 )
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 26 )
anims/dying = SubResource( 27 )
anims/idle = SubResource( 28 )
anims/loading = SubResource( 29 )
anims/running = SubResource( 30 )

[node name="InBattle" type="Sprite" parent="."]
visible = false
position = Vector2( -7, 0 )
texture = ExtResource( 6 )
hframes = 3
vframes = 4
frame = 3

[node name="Stats" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Skill" type="Node" parent="."]
script = ExtResource( 4 )

[node name="NodeUB" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="HitBox" type="Area2D" parent="NodeUB"]
scale = Vector2( -1, 1 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NodeUB/HitBox"]
position = Vector2( -320, 0 )
shape = SubResource( 23 )
disabled = true
